--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-project",
   "private": true,
+  "version": "1.1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
